syntax = "proto3";

package three_kingdoms.player;

option go_package = "ThreeKingdoms/internal/shared/gen/player;playerpb";

message Building {
  string rnick = 2  [json_name = "RNick"];       // 角色昵称
  string name = 3  [json_name = "name"];
  int32 union_id = 4  [json_name = "union_id"];    // 联盟id
  string union_name = 5  [json_name = "union_name"];  // 联盟名字
  int32 parent_id = 6  [json_name = "parent_id"];   // 上级id
  int32 x = 7  [json_name = "x"];
  int32 y = 8  [json_name = "y"];
  int32 type = 9  [json_name = "type"];        // int8 -> int32
  int32 level = 10 [json_name = "level"];       // int8 -> int32
  int32 op_level = 11 [json_name = "op_level"];    // int8 -> int32
  int32 cur_durable = 12 [json_name = "cur_durable"];
  int32 max_durable = 13 [json_name = "max_durable"];
  int32 defender = 14 [json_name = "defender"];
  int64 occupy_time = 15 [json_name = "occupy_time"];
  int64 end_time = 16 [json_name = "end_time"];    // 建造完的时间
  int64 give_up_time = 17 [json_name = "giveUp_time"]; // 领地到了这个时间会被放弃
}